--- a/html/task-2.html
+++ b/html/task-2.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <ul class="gallery"></ul>
    <script src="../js/task-2.js"></script>
 </body>
 </html>
