--- a/html/task-2.html
+++ b/html/task-2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/task-2.css">
     <title>Document</title>
 </head>
