--- a/task-4.html
+++ b/task-4.html
@@ -20,6 +20,6 @@
         </label>
         <button type="submit">Log in</button>
       </form>
-  <script src="../js/task-4.js"></script>
+  <script src="./js/task-4.js"></script>
 </body>
 </html>
