--- a/task-6.html
+++ b/task-6.html
@@ -15,6 +15,6 @@
       </div>
       
       <div id="boxes"></div>
-    <script src="../js/task-6.js"></script>
+    <script src="./js/task-6.js"></script>
 </body>
 </html>
