--- a/task-1.html
+++ b/task-1.html
@@ -38,6 +38,6 @@
           </ul>
         </li>
       </ul>
-    <script src="../js/task-1.js"></script>
+    <script src="./js/task-1.js"></script>
 </body>
 </html>
