--- a/task-2.html
+++ b/task-2.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <ul class="gallery"></ul>
-   <script src="../js/task-2.js"></script>
+   <script src="./js/task-2.js"></script>
 </body>
 </html>
