--- a/task-3.html
+++ b/task-3.html
@@ -11,6 +11,6 @@
     <input type="text" id="name-input" placeholder="Please enter your name" />
 <h1>Hello, <span id="name-output">Anonymous</span>!</h1>
     
-<script src="../js/task-3.js"></script>
+<script src="./js/task-3.js"></script>
 </body>
 </html>
