--- a/task-5.html
+++ b/task-5.html
@@ -13,7 +13,7 @@
         <button type="button" class="change-color">Change color</button>
       </div>
 
-      <script src="../js/task-5.js"></script>
+      <script src="./js/task-5.js"></script>
 </body>
 </html>
 
