--- a/task-2.html
+++ b/task-2.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/task-2.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/task-1.css">
     <title>Document</title>
 </head>
 <body>
+    <p><a href="index.html">Go back</a></p>
     <ul class="gallery"></ul>
    <script src="./js/task-2.js"></script>
 </body>
