--- a/task-1.html
+++ b/task-1.html
@@ -9,6 +9,7 @@
 
 </head>
 <body>
+  <p><a href="index.html">Go back</a></p>
     <ul id="categories">
         <li class="item">
           <h2>Animals</h2>
