--- a/task-5.html
+++ b/task-5.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <p><a href="index.html">Go back</a></p>
     <div class="widget">
         <p>Background color: <span class="color">-</span></p>
         <button type="button" class="change-color">Change color</button>
