--- a/task-6.html
+++ b/task-6.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <p><a href="index.html">Go back</a></p>
     <div id="controls">
         <input type="number" min="1" max="100" step="1" />
         <button type="button" data-create>Create</button>
